--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^25.2.0",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "prisma": "^7.3.0",
     "tsx": "^4.21.0",
@@ -21,11 +22,13 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "better-auth": "^1.4.18",
     "cors": "^2.8.6",
     "dot": "^1.1.3",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "node": "^25.6.0",
+    "nodemailer": "^8.0.0",
     "pg": "^8.18.0"
   }
 }
